[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "replyloop"
version = "0.1.0"
description = "Local-first commitment reminder engine"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "ReplyLoop maintainers"}]
dependencies = []

[project.scripts]
replyloop = "replyloop.cli:main"

[project.entry-points."hermes_agent.plugins"]
replyloop = "replyloop.hermes_plugin"

[tool.setuptools.packages.find]
include = ["replyloop*"]

[tool.setuptools.package-data]
replyloop = ["migrations/*.sql"]
